kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-versioned-schemas.pages.dev/gateway-api/1.5.0/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - flux.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
